# telegram-assistant

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  _deploy.py  apis.py  bht.py  document_handler.py  helper.py  kindle2notion.py  main.py  process.json  process_excel.py  process_txt.py  process_zip.py  pyproject.toml  requirements.txt  requirements_custom.txt  ruff.toml  transcriber.py  wol.py
.run/: deployment.run.xml  main.run.xml
cd/: Chart.yaml  values.yaml
ci/: pipeline-template.yaml  pipeline.yaml
handler/: audio_handler.py  command_handler.py  document_handler.py  error_handler.py  excel_handler.py  markdown_handler.py  pdf_handler.py  text_handler.py  video_handler.py  voice_handler.py  xml_handler.py  zip_handler.py
helper/: caching.py  config_helper.py  db_helper.py  file_helper.py  handler_helper.py  telegram_helper.py
notebooks/: akeyless.ipynb  get_new_refreshtoken_from_azure.ipynb  optimize_onedrive.ipynb  paramiko_test.ipynb  pdf test.ipynb  process_bookmarks.ipynb  regex_test.ipynb  requests.ipynb  test.ipynb  test.py  test_markdown_read.ipynb  test_split_chars.ipynb  todoist_account.ipynb  todoist_get_labels.ipynb  todoist_get_non_active_tasks.ipynb  todoist_json.ipynb  todoist_upload_audio_test.ipynb  xml_test.ipynb
services/: audiobook_service.py  book_note_service.py  bookmark_service.py  cloudflare_service.py  conversation_service.py  github_service.py  grabber_service.py  grabber_service_v2.py  groq_service.py  llm_service.py  logging_service.py  mermaid_service.py  microsoft_service.py  monica_service.py  notion_service.py  (+8 more)
(+52 files in other folders)
